Style:fix alignment

--- a/src/client/styles/styles.scss
+++ b/src/client/styles/styles.scss
@@ -10,14 +10,9 @@ body {
 
 input {
     padding: 2rem;
-    display: block;
-    height: 60px;
-    width: 320px;
-    color: #f0d43a;
-    font-size: 20px;
     font-family: 'Oswald', sans-serif;
-    border: none;
-    width: 100%;
+    width: 80%;
+    margin: 1rem;
 }
 
 :hover {
